--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="style.css" >
-    <link rel="icon" href="./logo/5 Web Apps Which Show Us How To Make Use Of QR Codes Differently.jpg">
+    <link rel="icon" href="https://in.pinterest.com/pin/966022188804135314/">
   </head>
   <body>
     <div class="container">
